<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/darker_grey"
    tools:context=".Activities.CreateUserActivity">

    <ImageView
        android:src="@drawable/logo_light"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded"
        android:layout_width="match_parent"
        android:layout_margin="60dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="vertical">

            <EditText style="@style/form_text"
                android:textAlignment="center"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:id="@+id/username"
                android:inputType="text"/>

            <EditText style="@style/form_text"
                android:textAlignment="center"
                android:hint="@string/password"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:inputType="textPassword"/>

            <EditText style="@style/form_text"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:hint="@string/password_confirm"
                android:id="@+id/password_confirm"
                android:inputType="textPassword"/>

            <EditText style="@style/form_text"
                android:textAlignment="center"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:id="@+id/name"
                android:inputType="text"/>

            <EditText style="@style/form_text"
                android:textAlignment="center"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:id="@+id/last_name"
                android:inputType="text"/>

            <EditText style="@style/form_text"
                android:textAlignment="center"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:id="@+id/email"
                android:inputType="textEmailAddress"/>

            <TextView style="@style/text"
                android:id="@+id/error"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:visibility="gone"
                android:text="@string/create_error"/>
        </LinearLayout>

        <LinearLayout style="@style/rounded">

            <LinearLayout style="@style/rounded"
                android:id="@+id/register"
                android:onClick="register">

                <TextView style="@style/tab_text"
                    android:textSize="22sp"
                    android:layout_margin="5dp"
                    android:text="@string/confirm"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
