<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <TextView style="@style/title"
        android:padding="0dp"
        android:text="@string/legend"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/legend_round_excellent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView style="@style/text"
                android:text="@string/excelent"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/legend_round_adequate"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView style="@style/text"
                android:text="@string/inadequate"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/legend_round_medium"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView style="@style/text"
                android:text="@string/medium"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/legend_round_bad"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView style="@style/text"
                android:text="@string/bad"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/legend_round_terrible"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView style="@style/text"
                android:text="@string/terrible"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
