<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.RideFinishedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView style="@style/title"
            android:text="@string/give_name"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout style="@style/box_container">

            <LinearLayout style="@style/box_outer">

                <LinearLayout style="@style/box_inner">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp">

                        <TableRow style="@style/form_row">

                            <TextView style="@style/text"
                                android:text="@string/ride_name"/>

                            <EditText style="@style/form_text"
                                android:inputType="text"
                                android:id="@+id/ride_name"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"/>
                        </TableRow>

                        <TableRow>

                            <TextView style="@style/text"
                                android:text="@string/average_speed"/>

                            <TextView style="@style/text"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:id="@+id/average_speed"/>
                        </TableRow>

                        <TableRow>

                            <TextView style="@style/text"
                                android:text="@string/total_distance"/>

                            <TextView style="@style/text"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:id="@+id/total_distance"/>
                        </TableRow>

                        <TableRow>

                            <TextView style="@style/text"
                                android:text="@string/date"/>

                            <TextView style="@style/text"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:id="@+id/date"/>
                        </TableRow>

                        <TableRow>

                            <TextView style="@style/text"
                                android:text="@string/duration"/>

                            <TextView style="@style/text"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:id="@+id/duration"/>
                        </TableRow>
                    </TableLayout>

                    <Button style="@style/button"
                        android:layout_gravity="end"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/confirm"
                        android:onClick="confirm"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
