<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <TextView style="@style/title"
        android:padding="0dp"
        android:text="@string/legend"/>

    <LinearLayout android:background="@drawable/gradient_light"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView style="@style/text_bigger"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"/>

        <TextView style="@style/text_bigger"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"/>
    </LinearLayout>
</LinearLayout>
