<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/calibrated"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="20dp">

            <TextView style="@style/title"
                android:text="@string/calibrate"/>

            <TextView android:id="@+id/calibration_message"
                style="@style/text"
                android:textAlignment="center"
                android:text="@string/calibration_message"
                android:layout_marginBottom="5dp"/>

            <TextView style="@style/text"
                android:textAlignment="center"
                android:text="@string/calibration_notice"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout style="@style/tab_outer"
            android:layout_weight="1">

            <LinearLayout android:id="@+id/recallibrate"
                style="@style/tab_inner"
                android:onClick="calibrate">

                <TextView style="@style/tab_text"
                    android:text="@string/start"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/tab_outer"
            android:layout_weight="1">

            <LinearLayout android:id="@+id/confirm"
                style="@style/tab_inner"
                android:onClick="confirm">

                <TextView style="@style/tab_text"
                    android:text="@string/confirm"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
