<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/darker_grey"
    tools:context=".activities.LoginActivity">

    <ImageView style="@style/logo"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/logo"
        android:src="@drawable/logo_light"
        android:contentDescription="@string/login"/>

    <LinearLayout android:id="@+id/container"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:orientation="vertical">

        <LinearLayout
            android:padding="25dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText style="@style/form_text"
                android:hint="@string/username"
                android:textAlignment="center"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:inputType="text"/>

            <EditText style="@style/form_text"
                android:textAlignment="center"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:id="@+id/password"
                android:inputType="textPassword"/>

            <TextView style="@style/text"
                android:id="@+id/register_link"
                android:text="@string/create_new"
                android:layout_gravity="end"/>

            <TextView style="@style/text"
                android:id="@+id/error"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:text="@string/login_error"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout style="@style/rounded">

            <LinearLayout style="@style/rounded"
                android:id="@+id/login"
                android:onClick="login"
                android:padding="0dp">

                <TextView style="@style/tab_text"
                    android:text="@string/login"
                    android:textSize="22sp"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
